src-tauri/compile_error5.txt
   Compiling getrandom v0.3.4
    Checking memchr v2.7.6
    Checking windows-sys v0.61.2
   Compiling typenum v1.19.0
   Compiling generic-array v0.14.7
    Checking minimal-lexical v0.2.1
    Checking linked-hash-map v0.5.6
    Checking md5 v0.7.0
   Compiling uuid v1.19.0
   Compiling cfb v0.7.3
   Compiling schemars v0.8.22
    Checking aho-corasick v1.1.4
    Checking serde_json v1.0.149
    Checking core2 v0.4.0
    Checking nom v8.0.0
    Checking nom v7.1.3
    Checking bitstream-io v4.9.0
    Checking infer v0.19.0
   Compiling crypto-common v0.1.7
   Compiling block-buffer v0.10.4
   Compiling digest v0.10.7
    Checking jsonptr v0.6.3
    Checking serialize-to-javascript v0.1.2
   Compiling sha2 v0.10.9
    Checking regex-automata v0.4.13
    Checking lopdf v0.32.0
    Checking json-patch v3.0.1
   Compiling tauri-utils v2.8.1
    Checking winapi-util v0.1.11
    Checking softbuffer v0.4.8
    Checking dirs-sys v0.5.0
    Checking dirs v6.0.0
    Checking same-file v1.0.6
    Checking walkdir v2.5.0
    Checking av1-grain v0.2.5
    Checking rav1e v0.8.1
    Checking regex v1.12.2
    Checking urlpattern v0.3.0
    Checking ravif v0.12.0
    Checking image v0.25.9
    Checking tauri-runtime v2.9.2
    Checking tauri-runtime-wry v2.9.3
   Compiling tauri-build v2.5.3
   Compiling tauri-plugin v2.5.2
   Compiling tauri-codegen v2.5.2
   Compiling tauri v2.9.5
   Compiling tauri-plugin-fs v2.4.5
   Compiling tauri-macros v2.5.2
   Compiling tauri-plugin-opener v2.5.3
   Compiling tauri-plugin-dialog v2.6.0
   Compiling tauri-app v0.1.0 (C:\H-ASSASSIN\Codeing\Electron Projects\PDFusion\src-tauri)
error[E0599]: no method named `append` found for struct `lopdf::Document` in the current scope
  --> src\pdf.rs:21:13
   |
21 |         doc.append(&mut next);
   |             ^^^^^^ method not found in `lopdf::Document`
   |
help: some of the expressions' fields have a method of the same name
   |
21 |         doc.bookmarks.append(&mut next);
   |             ++++++++++
21 |         doc.objects.append(&mut next);
   |             ++++++++
21 |         doc.reference_table.entries.append(&mut next);
   |             ++++++++++++++++++++++++

error[E0599]: no method named `insert_page` found for struct `lopdf::Document` in the current scope
   --> src\pdf.rs:39:17
    |
 39 |         new_doc.insert_page(1, doc.get_object(object_id).unwrap().clone());
    |                 ^^^^^^^^^^^
    |
help: there is a method `insert_image` with a similar name, but with different arguments
   --> C:\Users\hassa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\lopdf-0.32.0\src\parser_aux.rs:145:5
    |
145 | /     pub fn insert_image(
146 | |         &mut self, page_id: ObjectId, img_object: Stream, position: (f32, f32), size: (f32, f32),
147 | |     ) -> Result<()> {
    | |___________________^

error[E0308]: mismatched types
   --> src\pdf.rs:102:12
    |
102 |     if let Some(info_ref) = info {
    |            ^^^^^^^^^^^^^^   ---- this expression has type `Result<&lopdf::Object, lopdf::Error>`
    |            |
    |            expected `Result<&Object, Error>`, found `Option<_>`
    |
    = note: expected enum `Result<&lopdf::Object, lopdf::Error>`
               found enum `std::option::Option<_>`

error[E0308]: mismatched types
   --> src\pdf.rs:105:53
    |
105 |             title = dict.get(b"Title").and_then(|v| v.as_str().ok()).map(String::from);
    |                                                     ^^^^^^^^^^^^^^^ expected `Result<_, Error>`, found `Option<&[u8]>`
    |
    = note: expected enum `Result<_, lopdf::Error>`
               found enum `std::option::Option<&[u8]>`
help: try wrapping the expression in `Ok`
    |
105 |             title = dict.get(b"Title").and_then(|v| Ok(v.as_str().ok())).map(String::from);
    |                                                     +++               +

error[E0308]: mismatched types
   --> src\pdf.rs:105:21
    |
 99 |     let mut title = None;
    |                     ---- expected due to this value
...
105 |             title = dict.get(b"Title").and_then(|v| v.as_str().ok()).map(String::from);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<_>`, found `Result<String, Error>`
    |
    = note: expected enum `std::option::Option<_>`
               found enum `Result<std::string::String, lopdf::Error>`
help: try wrapping the expression in `Some`
    |
105 |             title = Some(dict.get(b"Title").and_then(|v| v.as_str().ok()).map(String::from));
    |                     +++++                                                                  +

error[E0308]: mismatched types
   --> src\pdf.rs:106:55
    |
106 |             author = dict.get(b"Author").and_then(|v| v.as_str().ok()).map(String::from);
    |                                                       ^^^^^^^^^^^^^^^ expected `Result<_, Error>`, found `Option<&[u8]>`
    |
    = note: expected enum `Result<_, lopdf::Error>`
               found enum `std::option::Option<&[u8]>`
help: try wrapping the expression in `Ok`
    |
106 |             author = dict.get(b"Author").and_then(|v| Ok(v.as_str().ok())).map(String::from);
    |                                                       +++               +

error[E0308]: mismatched types
   --> src\pdf.rs:106:22
    |
100 |     let mut author = None;
    |                      ---- expected due to this value
...
106 |             author = dict.get(b"Author").and_then(|v| v.as_str().ok()).map(String::from);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<_>`, found `Result<String, Error>`
    |
    = note: expected enum `std::option::Option<_>`
               found enum `Result<std::string::String, lopdf::Error>`
help: try wrapping the expression in `Some`
    |
106 |             author = Some(dict.get(b"Author").and_then(|v| v.as_str().ok()).map(String::from));
    |                      +++++                                                                   +

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `tauri-app` (lib) due to 7 previous errors
